# Zensil-API

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SETUP.md  docker-compose.yml  instrumentation.ts  next.config.ts  package-lock.json  package.json  render.yaml  vercel.json
.github/workflows/: ci.yml  etl-fast.yml  etl.yml
app/: globals.css  layout.tsx
app/(auth)/login/: page.tsx
app/(dash)/: layout.tsx  page.tsx
app/(dash)/advertising/: page.tsx
app/(dash)/inventory/: page.tsx
app/(dash)/products/: page.tsx
app/(dash)/sales/: page.tsx
apps/web/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  proxy.ts
components/: AppFrame.tsx  DecisionCard.tsx  DownloadCsv.tsx  DrilldownTable.tsx  ImportReviews.tsx  Insights.tsx  Logo.tsx  ThemeToggle.tsx  charts.tsx  ui.tsx
etl/: .dockerignore  Dockerfile  alerting.py  pyproject.toml  run_all.py  settings.py
etl/auth/: amazon_ads.py  amazon_spapi.py  flipkart.py  shopify.py
etl/db/: client.py  migrate.py
etl/pipelines/: amazon_ads_reports.py  amazon_inventory.py  amazon_orders.py  amazon_returns.py  flipkart_inventory.py  flipkart_orders.py  shopify_inventory.py  shopify_orders.py
etl/tests/: test_amazon_returns.py  test_run_all.py  test_settings.py
lib/: auth.ts  data.ts  etl-scheduler.ts  exports.ts  filter.ts  insights.ts  queries.ts  types.ts  warehouse.ts
prototype/: Zensil_Ops_Dashboard.html
supabase/: seed.sql
supabase/migrations/: 0001_init.sql  0002_views.sql  0003_rpc.sql  0004_security.sql  0005_return_rate_window.sql  0006_fulfillment_split.sql  0007_reviews.sql
(+29 files in other folders)
