[project]
name = "zensil-etl"
version = "0.1.0"
description = "Zensil multichannel ETL — Amazon SP-API + Ads, Flipkart, Shopify → PostgreSQL"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.4",
    "tenacity>=9.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.6", "mypy>=1.11", "pytest>=8.0"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = [".."]
