[project]
name = "zensil-etl"
version = "0.1.0"
description = "Zensil multichannel ETL — Amazon SP-API + Ads, Flipkart, Shopify → PostgreSQL"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.4",
    "tenacity>=9.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.6", "mypy>=1.11", "pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# This directory IS the `etl` package (code imports `from etl.x import ...`),
# so map it explicitly — auto-discovery sees auth/db/pipelines as separate
# top-level packages and refuses to build (breaks `pip install -e .`).
package-dir = { "etl" = "." }
packages = ["etl", "etl.auth", "etl.db", "etl.pipelines"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = [".."]
